--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
         "build": "vite build",
         "dev": "vite"
     },
-    "devDependencies": {
+    "dependencies": {
         "autoprefixer": "^10.4.20",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
