Use Tailwind 4 and Flux 2

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -33,18 +33,10 @@ jobs:
           cache: 'npm'
 
       - name: Install Node Dependencies
-        run: npm ci
+        run: npm i
 
       - name: Create SQLite Database
         run: touch database/database.sqlite
-
-      - name: Debug Environment Variables
-        run: |
-          echo "FLUX_USERNAME is set: ${{ secrets.FLUX_USERNAME != '' }}"
-          echo "FLUX_LICENSE_KEY is set: ${{ secrets.FLUX_LICENSE_KEY != '' }}"
-
-      - name: Add Flux Credentials Loaded From ENV
-        run: composer config http-basic.composer.fluxui.dev "${{ secrets.FLUX_USERNAME }}" "${{ secrets.FLUX_LICENSE_KEY }}"
 
       - name: Install Dependencies
         run: composer install --no-interaction --prefer-dist --optimize-autoloader
