--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -36,13 +36,9 @@ jobs:
       - name: Run Pint
         run: vendor/bin/pint
 
-      - name: Commit Changes
-        uses: stefanzweifel/git-auto-commit-action@v5
-        with:
-          commit_message: fix code style
-          commit_options: '--no-verify'
-          file_pattern: '!.github/workflows/* **/*'
-
-      # We need to run PHPStan after commiting changes as it does not auto-fix errors...
-      - name: Run PHPStan
-        run: ./vendor/bin/phpstan
+      # - name: Commit Changes
+      #   uses: stefanzweifel/git-auto-commit-action@v5
+      #   with:
+      #     commit_message: fix code style
+      #     commit_options: '--no-verify'
+      #     file_pattern: '!.github/workflows/* **/*'
